--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>HyperCode - Learn HTML Interactively</title>
-<meta name="description" content="HyperCode is an interactive HTML learning hub for beginners. Learn HTML with live code editor, examples, and tips!">
+<title>CodzGuy - Professional HTML Editor</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- CodeMirror -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/codemirror.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/theme/dracula.min.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/codemirror.min.js"></script>
@@ -13,133 +14,193 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/mode/css/css.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/addon/edit/closetag.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.12/addon/edit/matchbrackets.min.js"></script>
+
+<!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 <style>
-body{margin:0;font-family:'Poppins',sans-serif;background:linear-gradient(to bottom,#0f172a,#1e293b);color:#e5e7eb;overflow-x:hidden;}
-/* Marquee */
-.marquee-container{width:100%;overflow:hidden;background:#1e293b;padding:10px 0;box-shadow:0 2px 8px #2563eb;color:#38bdf8;font-weight:bold;display:flex;align-items:center;}
-.marquee{display:inline-block;white-space:nowrap;animation: marquee 15s linear infinite;}
-@keyframes marquee{0%{transform:translateX(100%);}100%{transform:translateX(-100%);}}
-/* Hero */
-#home{display:flex;flex-direction:column;justify-content:center;align-items:center;height:100vh;text-align:center;background:url('https://images.unsplash.com/photo-1581091012184-012d3f6b4bde?fit=crop&w=1950&q=80') no-repeat center/cover;position:relative;overflow:hidden;}
-#home::after{content:"";position:absolute;top:0;left:0;width:100%;height:100%;background: rgba(15,23,42,0.7);}
-#home-content{position:relative; z-index:1; animation: fadeIn 2s ease forwards;}
-#home h1{font-size:4em;margin-bottom:20px;color:#fff;animation: slideDown 1.5s ease forwards;transition:0.3s;cursor:pointer;}
-#home h1:hover{color:#60a5fa;transform: scale(1.05);}
-#home p{font-size:1.5em;margin-bottom:40px;color:#cbd5e1;animation: slideUp 1.5s ease forwards;}
-#home button{padding:18px 35px;font-size:1.2em;border-radius:50px;background:linear-gradient(45deg,#2563eb,#3b82f6);color:#fff;border:none;cursor:pointer;box-shadow:0 5px 15px rgba(0,0,0,0.3);transition:0.4s;}
-#home button:hover{transform: scale(1.1);background: linear-gradient(45deg,#3b82f6,#60a5fa);}
-@keyframes fadeIn{from{opacity:0;}to{opacity:1;}}
-@keyframes slideDown{from{opacity:0;transform:translateY(-50px);}to{opacity:1;transform:translateY(0);}}
-@keyframes slideUp{from{opacity:0;transform:translateY(50px);}to{opacity:1;transform:translateY(0);}}
-/* Sections */
-section{display:none;padding:30px;opacity:0;transform:translateY(20px);transition:0.5s ease-in-out;}
-section.active{display:block;opacity:1;transform:translateY(0);}
-.card{background: rgba(30,41,59,0.95); padding:20px; border-radius:15px; max-width:900px; margin:20px auto; box-shadow:0 0 15px #2563eb; transition:0.4s; cursor:pointer;}
-.card:hover{transform:scale(1.03) translateY(-5px);box-shadow:0 0 25px #3b82f6;}
-.editor-container{display:flex;flex-wrap:wrap;gap:20px;margin-top:20px;}
-.editor,.output{background:#020617;padding:15px;border-radius:12px;flex:1;min-height:300px;box-shadow:0 0 15px #38bdf8;transition:0.4s;}
-.editor:hover,.output:hover{transform:scale(1.02);box-shadow:0 0 25px #60a5fa;}
-#editor{height:300px;}
-.output iframe{width:100%;height:300px;border:2px solid #2563eb;border-radius:10px;background:white;}
-.rules{background: rgba(21,128,61,0.1); border-left:5px solid #16a34a; padding:15px; margin:15px auto; max-width:900px; border-radius:10px;}
-.rules h3{color:#4ade80; transition:0.3s;}
-.rules h3:hover{color:#60a5fa; transform:scale(1.05);}
-.rules ul{margin:0; padding-left:20px;}
-.rules li{margin:5px 0;}
-.contact a{color:#38bdf8; margin:0 10px; text-decoration:none; font-weight:bold; transition:0.3s;}
-.contact a:hover{color:#60a5fa;text-decoration:underline;}
-.CodeMirror span.tag{cursor: help; border-bottom: 1px dotted #38bdf8;}
+/* --- GLOBAL --- */
+body { margin:0; font-family:'Poppins',sans-serif; background:#0f172a; color:#e5e7eb; overflow-x:hidden; transition:0.5s; }
+body.light-mode { background:#f5f5f5; color:#111; }
+button { padding:10px 20px; border-radius:50px; border:none; cursor:pointer; transition:0.3s; background:linear-gradient(45deg,#2563eb,#3b82f6); color:#fff; }
+button:hover { transform:scale(1.05); box-shadow:0 5px 15px rgba(50,150,255,0.5); }
+
+/* --- MARQUEES --- */
+.marquee-container { width:100%; overflow:hidden; background:#1e293b; padding:8px 0; box-shadow:0 2px 8px #2563eb; color:#38bdf8; font-weight:bold; }
+.marquee-container:nth-child(2) { background:#111; padding:5px 0; color:#60a5fa; }
+
+/* --- HOME SECTION --- */
+#home { display:flex; justify-content:center; align-items:center; text-align:center; height:100vh; background:url('https://images.unsplash.com/photo-1581091012184-012d3f6b4bde?fit=crop&w=1950&q=80') no-repeat center/cover; position:relative; overflow:hidden; }
+#home::after { content:""; position:absolute; top:0; left:0; width:100%; height:100%; background: rgba(15,23,42,0.75); }
+#home-content { position:relative; z-index:1; animation:fadeInHome 1s ease forwards; }
+#home h1 { font-size:4em; margin-bottom:20px; cursor:pointer; transition:0.3s; }
+#home h1:hover { transform:scale(1.1) rotate(-2deg); color:#60a5fa; }
+#home p { font-size:1.5em; margin-bottom:40px; }
+
+/* --- NAVBAR --- */
+.navbar { display:flex; justify-content:space-between; align-items:center; padding:10px 20px; background:rgba(30,41,59,0.95); box-shadow:0 2px 10px rgba(0,0,0,0.3); }
+.navbar h2 { margin:0; color:#60a5fa; }
+
+/* --- LEARN PAGE --- */
+#learnPage { display:none; flex-direction:column; padding:10px 20px; animation:fadeIn 1s ease forwards; }
+#learnPage.active { display:flex; }
+
+.rules { background: rgba(21,128,61,0.1); border-left:5px solid #16a34a; padding:15px; margin:15px 0; border-radius:10px; }
+.rules h3 { color:#4ade80; transition:0.3s; }
+.rules h3:hover { transform:scale(1.05); color:#60a5fa; }
+
+.editor-output { display:flex; gap:10px; flex:1; min-height:450px; border:2px solid #2563eb; border-radius:12px; overflow:hidden; background:#020617; animation:fadeIn 1s ease forwards; }
+.editor, .output { flex:1; min-height:450px; padding:15px; box-sizing:border-box; position:relative; }
+.editor { background:#0f172a; color:#e5e7eb; font-family:"Calibri","Segoe UI","Arial",sans-serif; font-size:16px; }
+.output { background:#fefefe; color:#111; border-radius:8px; overflow:hidden; }
+.output iframe { width:100%; height:100%; border:none; border-radius:8px; }
+
+/* --- RESIZER --- */
+.resizer { width:5px; cursor:col-resize; background:#2563eb; position:relative; }
+
+/* --- CODEMIRROR WITHOUT LINE NUMBERS --- */
+.CodeMirror { height:100%; font-size:16px; font-family:"Calibri","Segoe UI","Arial",sans-serif; padding-left:15px; }
+.CodeMirror-gutters { display:none; }
+
+/* --- RESPONSIVE --- */
+@media(max-width:900px){ .editor-output{ flex-direction:column; } #home h1{font-size:3em;} #home p{font-size:1.2em;} }
+
+/* --- ANIMATIONS --- */
+@keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
+@keyframes fadeInHome { from{opacity:0; transform:translateY(-30px);} to{opacity:1; transform:translateY(0);} }
 </style>
 </head>
-<body>
+<body class="dark-mode">
 
+<!-- TOP CONTACT MARQUEE -->
 <div class="marquee-container">
-  <div class="marquee">
+  <marquee behavior="scroll" direction="left" scrollamount="5">
     <i class="fa-brands fa-whatsapp"></i> +977 9744303188 &nbsp;&nbsp;|&nbsp;&nbsp;
-    <i class="fa-brands fa-instagram"></i> r4gehere_ &nbsp;&nbsp;|&nbsp;&nbsp; Learn HTML with HyperCode!
-  </div>
+    <i class="fa-brands fa-instagram"></i> r4gehere_ &nbsp;&nbsp;|&nbsp;&nbsp; Learn HTML with CodzGuy!
+  </marquee>
 </div>
 
-<section id="home" class="active center">
+<!-- CREATOR MARQUEE (slower, below contact) -->
+<div class="marquee-container">
+  <marquee behavior="scroll" direction="left" scrollamount="2">
+    Created by ग्रिष्म गौतम
+  </marquee>
+</div>
+
+<!-- HOME -->
+<section id="home" class="active">
   <div id="home-content">
-    <h1>🚀 HyperCode</h1>
-    <p>Interactive HTML Learning Hub for Beginners</p>
-    <button onclick="startLearning()">Start Learning</button>
+    <h1>🚀 CodzGuy</h1>
+    <p>Professional HTML Editor for Everyone</p>
+    <button id="startBtn">Start Learning</button>
   </div>
 </section>
 
+<!-- LEARN PAGE -->
 <section id="learnPage">
-  <h1 style="text-align:center; animation: fadeIn 1.5s ease;">HTML Learning - HyperCode</h1>
-
-  <div class="card">
-    <img src="https://images.unsplash.com/photo-1581091012184-012d3f6b4bde?fit=crop&w=900&q=80" alt="HTML Image" style="width:100%; border-radius:12px; margin-bottom:15px; animation: fadeIn 2s ease;">
-    <p>HTML (HyperText Markup Language) is the backbone of web pages. Learn interactively with live editor & tips!</p>
+  <div class="navbar">
+    <h2>CodzGuy Editor</h2>
+    <div>
+      <button id="homeBtn">🏠 Home</button>
+      <button id="runBtn">▶ Run</button>
+      <button id="resetBtn">⟳ Reset</button>
+      <button id="modeBtn">🌓 Dark/Light</button>
+    </div>
   </div>
 
   <div class="rules">
-    <h3>HTML Best Practices / Rules:</h3>
+    <h3>HTML Tips / Hints:</h3>
     <ul>
-      <li>Always start with <code>&lt;!DOCTYPE html&gt;</code>.</li>
-      <li>Use semantic tags like <code>&lt;header&gt;</code>, <code>&lt;footer&gt;</code>, <code>&lt;article&gt;</code>.</li>
-      <li>Keep your code clean and indented properly.</li>
-      <li>Use lowercase for tag names and attributes.</li>
+      <li>Use semantic tags & structure code well.</li>
       <li>Always close tags.</li>
-      <li>Use <code>&lt;meta charset="UTF-8"&gt;</code>.</li>
-      <li>Use comments (<code>&lt;!-- comment --&gt;</code>) to explain sections.</li>
+      <li>Indent your code for clarity.</li>
+      <li>Comments help explain your code.</li>
+      <li>Hover over tags for mini hints!</li>
     </ul>
   </div>
 
-  <div class="card editor-container">
+  <div class="editor-output">
     <div class="editor">
-      <h3>Code Editor</h3>
       <textarea id="editor"></textarea>
-      <button onclick="runCode()">▶ Run Code</button>
     </div>
+    <div class="resizer"></div>
     <div class="output">
-      <h3>Output</h3>
       <iframe id="outputFrame"></iframe>
     </div>
-  </div>
-
-  <div class="center contact">
-    <p>Contact Me:</p>
-    <a href="https://wa.me/9779744303188" target="_blank"><i class="fa-brands fa-whatsapp"></i>WhatsApp</a> | 
-    <a href="https://instagram.com/r4gehere_" target="_blank"><i class="fa-brands fa-instagram"></i>Instagram</a>
-  </div>
-
-  <div class="center">
-    <button onclick="goHome()">⬅ Home</button>
   </div>
 </section>
 
 <script>
-const home=document.getElementById("home");
-const learnPage=document.getElementById("learnPage");
-const outputFrame=document.getElementById("outputFrame");
+const home = document.getElementById("home");
+const learnPage = document.getElementById("learnPage");
+const outputFrame = document.getElementById("outputFrame");
+const body = document.body;
 
-let editor=CodeMirror.fromTextArea(document.getElementById("editor"),{
-  mode:"text/html", theme:"dracula", lineNumbers:true, autoCloseTags:true, matchBrackets:true
+/* CODE EDITOR */
+let editor = CodeMirror.fromTextArea(document.getElementById("editor"),{
+  mode:"text/html",
+  theme:"dracula",
+  lineNumbers:false, // ✅ no line numbers
+  autoCloseTags:true,
+  matchBrackets:true,
+  styleActiveLine: true
 });
 
-const defaultHTML=`<!DOCTYPE html>
+const defaultHTML = `<!DOCTYPE html>
 <html>
-<head>
-  <title>HyperCode Example</title>
-  <meta charset="UTF-8">
-</head>
+<head><title>CodzGuy Example</title><meta charset="UTF-8"></head>
 <body>
-  <h1>Hello from HyperCode</h1>
-  <p>Start editing this code and see results live!</p>
+<h1>Hello from CodzGuy</h1>
+<p>Edit this code and see results live!</p>
 </body>
 </html>`;
 
-function hideAll(){ document.querySelectorAll("section").forEach(s=>s.classList.remove("active"));}
-function goHome(){ hideAll(); home.classList.add("active");}
-function startLearning(){ hideAll(); learnPage.classList.add("active"); editor.setValue(defaultHTML); runCode();}
-function runCode(){ outputFrame.srcdoc=editor.getValue();}
-editor.setValue(defaultHTML);
+editor.setValue(localStorage.getItem("codz-editor") || defaultHTML);
 runCode();
+
+/* FUNCTIONS */
+function hideAll(){ document.querySelectorAll("section").forEach(s=>s.classList.remove("active")); }
+function goHome(){ hideAll(); home.classList.add("active"); window.scrollTo({top:0,behavior:"smooth"}); }
+function startLearning(){ hideAll(); learnPage.classList.add("active"); editor.focus(); runCode(); }
+function runCode(){ 
+  const code = editor.getValue();
+  const html = code.replace(/<body([^>]*)>/i, `<body$1 style="background:${body.classList.contains('dark-mode')?'#111':'#fff'};color:${body.classList.contains('dark-mode')?'#e5e7eb':'#111'}">`);
+  outputFrame.srcdoc = html;
+  localStorage.setItem("codz-editor", editor.getValue());
+}
+function resetCode(){ editor.setValue(defaultHTML); runCode(); }
+function toggleMode(){ body.classList.toggle("dark-mode"); body.classList.toggle("light-mode"); runCode(); }
+
+/* BUTTON EVENTS */
+document.getElementById("startBtn").onclick=startLearning;
+document.getElementById("homeBtn").onclick=goHome;
+document.getElementById("runBtn").onclick=runCode;
+document.getElementById("resetBtn").onclick=resetCode;
+document.getElementById("modeBtn").onclick=toggleMode;
+
+/* AUTO-RUN ON CHANGE */
+editor.on("change", runCode);
+
+/* RESIZER */
+const resizer = document.querySelector(".resizer");
+const editorDiv = document.querySelector(".editor");
+let isResizing = false;
+resizer.addEventListener("mousedown",()=>{ isResizing=true; });
+document.addEventListener("mousemove", e=>{
+  if(!isResizing) return;
+  const containerOffset = resizer.parentNode.getBoundingClientRect().left;
+  const newWidth = e.clientX - containerOffset;
+  editorDiv.style.flex=`0 0 ${newWidth}px`;
+});
+document.addEventListener("mouseup",()=>{ isResizing=false; });
+
+/* RUN CODE ON F5 */
+document.addEventListener("keydown", function(e) {
+    if (e.key === "F5") {
+        e.preventDefault(); // prevent browser refresh
+        runCode();
+    }
+});
 </script>
 
 </body>
